--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -6,12 +6,26 @@ html{
 *::after{
     box-sizing: inherit;
 }
+body{
+    font-family: 'Quicksand', sans-serif;
+    line-height: 24px;
+    font-size: 16px;
+    font-weight: 400;
+}
 a{
     display: inline-block;
     text-decoration: none;
+    color: #000;
 }
 ul,li{
     padding: 0;
     margin: 0;
     list-style: none;
+    display: inline-block;
+}
+
+.container{
+    max-width: 1170px;
+    padding: 0px 15px;
+    margin: 0 auto;
 }
