--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -8,9 +8,30 @@ html{
 }
 body{
     font-family: 'Quicksand', sans-serif;
+    color: #000;
     line-height: 24px;
     font-size: 16px;
     font-weight: 400;
+    position: relative;
+}
+html,
+body {
+    height: 100%;
+    overflow-x: hidden;
+}
+.wrapper {
+	position: relative;
+    min-height: 100%;
+}
+.content {
+	padding-bottom: 80px;
+}
+.footer {
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+    height: 80px;
 }
 a{
     display: inline-block;
@@ -28,4 +49,29 @@ ul,li{
     max-width: 1170px;
     padding: 0px 15px;
     margin: 0 auto;
+}
+
+
+.breadcrumbs__list {
+    a{
+        color: #fff;
+    }
+    li{
+        position: relative;
+        & + li{
+            padding-left: 25px;
+            &::before{
+                content: '/';
+                position: absolute;
+                left: 7px;
+                color: #fff;
+            }
+        }
+        &:last-child{
+            a,span{
+            color: #bfcad7;
+            }
+        }
+    }
+    
 }
