--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2531,7 +2531,9 @@ background-color: #ea4c89;
 .author__top,
 .pricing__top,
 .terms__top,
-.blog__top{
+.blog__top,
+.contact__top,
+.error__top{
     background-color: rgba(21,26,32,0.9);
     background-image: linear-gradient(to left, #0d3ef2 12%, #7221a0 87%);
     opacity: 0.9;
@@ -2542,7 +2544,9 @@ background-color: #ea4c89;
 .author__top--wrapper,
 .pricing__top--wrapper,
 .terms__top--wrapper,
-.blog__top--wrapper{
+.blog__top--wrapper,
+.contact__top--wrapper,
+.error__top--wrapper{
     height: 180px;
     & .breadcrumbs{
         padding-top: 50px;
@@ -2554,7 +2558,8 @@ background-color: #ea4c89;
 .login__top--info,
 .pricing__top--info,
 .terms__top--info,
-.blog__top--info{
+.blog__top--info,
+.error__top--info{
     font-size: 30px;
     font-weight: 500;
     line-height: 30px;
@@ -3604,6 +3609,168 @@ background-color: #ea4c89;
     background-repeat: no-repeat;
 }
 // ------------BLOG PAGE END------------
+
+// ------------CONTACT PAGE START------------
+
+.contact__top--wrapper{
+    text-align: center;
+    height: 280px;
+    color: #fff;
+}
+.contact__top--title{
+    padding-top: 100px;
+    font-weight: 500;
+    font-size: 30px;
+    line-height: 32px;
+}
+.contact__top--text{
+    font-size: 20px;
+    padding-top: 17px;
+}
+
+
+.contact{
+    background-color: #eff1f5;
+    padding: 100px 0px 120px;
+    text-align: center;
+}
+.contact__title{
+    font-size: 36px;
+    line-height: 36px;
+    margin-bottom: 22px;
+    span{
+        color: $blue;
+    }
+}
+.contact__text{
+    color: $text;
+    padding-bottom: 55px;
+    max-width: 675px;
+    margin: 0 auto;
+}
+.contact__items{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 50px;
+}
+.contact__item{
+    max-width: 360px;
+    width: 100%;
+    background-color: #fff;
+}
+.title-contact{
+    font-size: 20px;
+    font-weight: 500;
+    margin-bottom: 25px;
+}
+.contact__item-text{
+    color: $text;
+    line-height: 30px;
+    a{
+        color: $text;
+        line-height: 30px;
+    }
+}
+.contact__item-wrapper{
+    max-width: 240px;
+    margin: 0 auto;
+    padding: 45px 0;
+}
+.contact__item-icon{
+    margin-bottom: 32px;
+    font-size: 48px;
+    color: $blue;
+}
+.contact__item-number{
+    display: block;
+}
+
+.contact-form{
+    background-color: #fff;
+    padding: 50px 0;
+}
+.contact-form__title{
+    padding-bottom: 30px;
+    font-size: 24px;
+    border-bottom: 1px solid #ececec;
+}
+.contact-form_form{
+    padding-top: 30px;
+    max-width: 750px;
+    margin: 0 auto;
+    input{
+        max-width: 360px;
+        height: 50px;
+        width: 100%;
+        padding: 15px 45px;
+        border: 1px solid #ececec;
+        margin-bottom: 30px;
+        color: #9e9e9e;
+        &:nth-child(1),
+        &:nth-child(3){
+            margin-right: 25px;
+        }
+        &::placeholder{
+            color: #9e9e9e;
+        }
+    }
+    textarea{
+        width: 100%;
+        height: 130px;
+        resize: none;
+        padding: 15px 45px;
+        margin-bottom: 30px;
+        border: 1px solid #ececec;
+        &::placeholder{
+            color: #9e9e9e;
+        }
+    }
+}
+.contact-form__btn{
+    color: #fff;
+    background-color: $blue;
+    border-radius: 35px;
+    padding: 15px 30px;
+    border: none;
+    cursor: pointer;
+}
+
+.map{
+    height: 400px;
+    iframe{
+        width: 100%;
+        height: 100%;
+    }
+}
+
+// ------------CONTACT PAGE END------------
+
+// ------------ERROR PAGE END------------
+
+
+.error__inner{
+    padding: 65px 0px 100px;
+    text-align: center;
+}
+.error__img{
+    margin-bottom: 37px;
+}
+.error__text{
+    margin-bottom: 43px;
+    font-size: 30px;
+}
+.error__btn{
+    padding: 16px 40px;
+    background-color: $blue;
+    color: #fff;
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 18px;
+    border-radius: 35px;
+}
+
+
+// ------------ERROR PAGE END------------
 
 
 
